<resources>
    <string name="app_name">Categoría</string>

    <string name="Terminos"><u>Terminos y Condiciones</u></string>
    <string name="ingreseAqui"><u>Ingrese Aqui</u></string>
    <string name="web_client_id"><u>fanny123</u></string>

    <string name="log_out">Cerrar Sesion</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_principal">Principal</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_usuario">Usuario</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_egresos">Egresos</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_EgresosPendiente">Egresos Pendientes</string>
    <string name="Menu_IngresosPendiente">Ingresos Pendientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id" translatable="false">2123496067700054</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //reportes

    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
    <string name="nombre_Reporte">Sales by employee (In Thousands $)</string>
</resources>
