<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_usuario"
            />
        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_categoria"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_Ingresos"
            android:icon="@drawable/ic_ingresos"
            android:title="@string/menu_ingresos" />
        <item
            android:id="@+id/nav_Egresos"
            android:icon="@drawable/ic_egresos"
            android:title="@string/menu_egresos" />
        <item
            android:id="@+id/nav_Reportes"
            android:icon="@drawable/ic_reportes"
            android:title="@string/menu_reportes" />
    </group>
    <item android:title="Movimientos Pendientes">
        <menu>
            <item
                android:id="@+id/nav_EgresosPendientes"
                android:icon="@drawable/ic_egresos"
                android:title="@string/menu_EgresosPendiente" />
            <item
                android:id="@+id/nav_IngresosPendientes"
                android:icon="@drawable/ic_ingresos"
                android:title="@string/Menu_IngresosPendiente" />
        </menu>
    </item>

</menu>
